# Object-oriented-programming

lab1/: README.md  action.cpp  action.h  functions.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oop.pro  points.cpp  points.h  tools.cpp
lab2/: CMakeLists.txt  README  errors.h  iterator.cpp  iterator.h  iterator.hpp  list.cpp  list.h  list.hpp  list_base.h  main.cpp
lab2/test/: test.cpp
